--- a/styles/global.css
+++ b/styles/global.css
@@ -13,44 +13,36 @@
 }
 
 .rainbow-mesh {
-	background-color: hsla(0, 100%, 50%, 1);
+	background-color: hsl(0 100% 50%);
 	background-image: radial-gradient(
 			at 40% 20%,
-			hsla(28, 100%, 74%, 1) 0px,
+			hsl(28 100% 74%) 0px,
 			transparent 50%
 		),
 		radial-gradient(at 80% 0%, hsla(189, 100%, 56%, 1) 0px, transparent 50%),
 		radial-gradient(at 0% 50%, hsla(355, 100%, 93%, 1) 0px, transparent 50%),
-		radial-gradient(
-			at 80% 50%,
-			hsla(340, 100%, 76%, 1) 0px,
-			transparent 50%
-		),
-		radial-gradient(at 0% 100%, hsla(22, 100%, 77%, 1) 0px, transparent 50%),
-		radial-gradient(
-			at 80% 100%,
-			hsla(242, 100%, 70%, 1) 0px,
-			transparent 50%
-		),
-		radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0px, transparent 50%);
+		radial-gradient(at 80% 50%, hsl(340 100% 76%) 0px, transparent 50%),
+		radial-gradient(at 0% 100%, hsl(22 100% 77%) 0px, transparent 50%),
+		radial-gradient(at 80% 100%, hsl(242 100% 70%) 0px, transparent 50%),
+		radial-gradient(at 0% 0%, hsl(343 100% 76%) 0px, transparent 50%);
 }
 
 .candy-mesh {
 	background-color: #ff99ee;
 	background-image: radial-gradient(
 			at 99% 6%,
-			hsla(195, 69%, 67%, 1) 0px,
+			hsl(195 69% 67%) 0px,
 			transparent 50%
 		),
-		radial-gradient(at 55% 88%, hsla(189, 74%, 69%, 1) 0px, transparent 50%),
-		radial-gradient(at 53% 27%, hsla(271, 78%, 63%, 1) 0px, transparent 50%),
-		radial-gradient(at 89% 89%, hsla(317, 89%, 70%, 1) 0px, transparent 50%),
-		radial-gradient(at 35% 44%, hsla(337, 92%, 61%, 1) 0px, transparent 50%);
+		radial-gradient(at 55% 88%, hsl(189 74% 69%) 0px, transparent 50%),
+		radial-gradient(at 53% 27%, hsl(271 78% 63%) 0px, transparent 50%),
+		radial-gradient(at 89% 89%, hsl(317 89% 70%) 0px, transparent 50%),
+		radial-gradient(at 35% 44%, hsl(337 92% 61%) 0px, transparent 50%);
 }
 
 .glass {
 	backdrop-filter: blur(16px) saturate(180%);
-	background-color: rgba(255, 255, 255, 0.4);
+	background-color: rgb(255 255 255 / 0.4);
 }
 
 [data-nextjs-scroll-focus-boundary] {
